--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,50 @@
 .App {
+    & *{
+        font-family: 'Montserrat', sans-serif;
+        color: #111;
+    }
+    &.dark {
+        background-color: #111;
+        & h1, h2, p, span {
+            color: #fff;
+        }
+        & button {
+            background-color: sandybrown;
+            &.active{
+                border: 2px solid #fce2cc;
+            }
+        }
+         
+    }
     width: 100vw;
     height: 100vh;
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    & .title {
+        margin: 4rem auto;
+    }
     & button{
         margin: 0 .2rem;
-        padding: 1rem 2rem;
+        padding: 1rem;
         border: 2px solid transparent;
         border-radius: .5rem;
-        background-color: paleturquoise;
-        font-weight: bold;
+        background-color: turquoise;
         &.active{
             border: 2px solid darkcyan;
         }
     }
+    & .track-feed{
+        font-size: 1.5rem;
+    }
+    & .App-mode{
+        align-self: flex-end;
+        margin-top: 3px;
+    }
+    & .App-content{
+        display: flex;
+        flex-direction: column;
+    }
 }
-  
