--- a/src/components/NewFeed/NewFeed.css
+++ b/src/components/NewFeed/NewFeed.css
@@ -10,13 +10,11 @@
   align-items: center;
   justify-content: space-between; }
 
+.NewFeed .NewFeed-timer {
+  font-size: 1.5rem; }
+
 .NewFeed button {
-  margin: 0 .2rem;
-  padding: 1rem 2rem;
-  border: 2px solid transparent;
-  border-radius: .5rem;
-  background-color: paleturquoise;
-  font-weight: bold; }
+  padding: 1rem 2rem; }
 
 .NewFeed button.active {
   border: 2px solid darkcyan; }
