--- a/src/components/NewFeed/NewFeed.scss
+++ b/src/components/NewFeed/NewFeed.scss
@@ -24,4 +24,13 @@
     &-stop{
         font-size: 1.5rem;
     }
+    &-side-save{
+        padding: .5rem 2rem;
+    }
+    &-save{
+        margin: 1rem 0;
+        & button{
+            font-size: 1.5rem;
+        }
+    }
 }
